Replaced deprecated base64 for crc loader.